Changes since version 3.2.0
---------------------------

- IceGrid now allows defining an object adapter with a replica group
  from an other IceGrid application than the one where the object
  adapter is defined.

- Changed to the throughput demo to better support cross-language
  testing.

- Fixed bug with IceUtil::Cond under Windows which could cause a
  deadlock if signal was used in conjunction multiple waiting threads
  where at least one thread is using timedWait. Note that this bug
  also affects IceUtil::Monitor since this uses IceUtil::Cond.

- Fixed throughput performance problem on Windows that would occur
  when sending large requests.

- Added Ice.TCP.RcvSize and Ice.TCP.SndSize properties. These
  properties control the size of the TCP receive and send buffers for
  the TCP and SSL transports.

- Added support for opaque endpoints. For example:

  opaque -t 2 -v CTEyNy4wLjAuMREnAAD/////AA==

  This is the same as:

  ssl -h 127.0.0.1 -p 10001

  The "opaque" protocol identifier indicates an unknown protocol.
  Both the -t and the -v option must be present:

  -t <num>:    Indicates the protocol type (TCP = 1, SSL = 2, UDP = 3).

  -v <base64>: Provides the value of the opaque endpoint. The option
               argument is the marshaled representation of the endpoint
               (including the endpoint's enclosing encapsulation) in
               base64 encoding.

  This syntax is useful if, for example, a client that has the SSL
  plugin configured sends a proxy with an SSL endpoint to a server
  without the SSL plugin. Prior to this version, the server would
  drop the unknown SSL endpoint when it stringified the proxy.
  As of this version, the server preserves the endpoint and, when the server
  stringifies a proxy containing an unknown endpoint, it uses the above opaque syntax.

- Trailing characters past the adapter id in a stringified proxy
  will now raise a ProxyParseException.
